--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "procedural.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/AndradeTC86/ebac-javascript#readme",
   "dependencies": {
+    "jest": "^27.5.1",
     "node": "^17.4.0",
     "prolog": "^0.1.0",
     "python": "^0.0.4"
